--- a/assets/localization/mn-MN.json
+++ b/assets/localization/mn-MN.json
@@ -2,6 +2,7 @@
     "appName": "HWR",
     "start": "Эхлэх",
     "home": "Эхлэл",
+    "history": "Түүх",
     "tutorial": "Заавар",
     "uploadImage": "Зураг оруулах",
     "loading": "Түр хүлээнэ үү",
