--- a/assets/localization/mn-MN.json
+++ b/assets/localization/mn-MN.json
@@ -6,6 +6,8 @@
     "tutorial": "Заавар",
     "uploadImage": "Зураг оруулах",
     "loading": "Түр хүлээнэ үү",
+    "empty": "Хоосон",
+    "continue": "Үргэлжлүүлэх",
     "error": {
         "title": "Алдаа гарлаа",
         "body": "Таны зургийг боловсруулахад алдаа гарлаа. Та зааврын дагуу дахин оролдоно уу."
@@ -14,5 +16,14 @@
     "main": {
         "head": "Өөрийн зан төлөвийг",
         "body": "БИЧГИЙН ХЭВЭЭР ТАНЬ"
+    },
+    "help": {
+        "head": "Та доорх бичвэрийг А4-ийн бичгийн цулгуй цагаан цаасан дээр тод өнгийн балаар хуулан бичээд гэрэлтэй орчинд зургийг нь даран илгээнэ үү.",
+        "body": "Ачлахын дээдээр ачлууштай нь\nЭэж, аав, эх орон гурав.\n\nЯлахын түрүүнд ялууштай нь\nБие, хэл, сэтгэл гурав.\n\nҮйл бүхнээс эрхэм нь\nБодох, туурвих, дэмжих гурав.\n\nГурвалсан сүлжээ сургаалаас /Д.Данзанравжаа/"
+    },
+    "cameraTip": {
+        "head": "Зөвлөмж",
+        "body": "Камераар гар бичмэл бүхий зургийг таних хүртэл хүлээнэ. Таних үед автоматаар цааш үргэлжилнэ.",
+        "skip": "Үүнээс цааш харуулахгүй"
     }
 }
